# qt6-qsqlcipher

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.sqlcipher  README.md
cmake/: msvc.json
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/qsqlcipher/: CMakeLists.txt  qsql_sqlite.cpp  smain.cpp  sqlcipher.json
